fix: header-right overflow visible to unclip notification panel on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1383,7 +1383,7 @@ footer {
         width: 100%;
         justify-content: flex-end;
         flex-wrap: nowrap;
-        overflow: hidden;
+        overflow: visible;
     }
     
     /* Valyuta kursi */
